test/fail/break_outside_loop.zn
# ERRORS: 2
func main() {
  break 0
  continue 0
  0
}
